--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@types/react-redux": "^6.0.11",
+    "@types/redux-logger": "^3.0.6",
     "@types/styled-components": "^4.1.4",
     "antd": "^3.11.2",
     "react": "^16.7.0",
@@ -10,6 +12,7 @@
     "react-redux": "^6.0.0",
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
+    "redux-thunk": "^2.3.0",
     "styled-components": "^4.1.3"
   },
   "scripts": {
@@ -24,6 +27,7 @@
     "@types/react": "^16.7.17",
     "@types/react-dom": "^16.0.11",
     "react-app-rewired": "^1.6.2",
+    "redux-logger": "^3.0.6",
     "ts-import-plugin": "^1.5.5",
     "tslint-config-airbnb": "^5.11.1",
     "typescript": "^3.2.2"
