--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@types/redux-logger": "^3.0.6",
     "@types/styled-components": "^4.1.4",
     "antd": "^3.11.2",
+    "axios": "^0.18.0",
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
     "react-redux": "^6.0.0",
