--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-scripts-ts": "3.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
-    "styled-components": "^4.1.3"
+    "styled-components": "^4.1.3",
+    "webpack-dev-server": "^3.1.14"
   },
   "scripts": {
     "start": "react-app-rewired start --scripts-version react-scripts-ts",
